# recent-enabler

./: Cargo.toml  README.md  restore.rs  run_as_admin.bat
src/: app.rs  domain.rs  error.rs  lib.rs  main.rs  recent.rs  service.rs  status.rs  sysmain.rs  system_restore.rs  ui.rs  utils.rs
src/domain/: common.rs  error.rs  mod.rs  prefetch.rs  recent.rs  system_restore.rs  types.rs
src/repositories/: elevation.rs  file_system.rs  mod.rs  registry.rs  system_restore.rs  windows_service.rs
src/services/: mod.rs  prefetch.rs  recent.rs  system_restore.rs
src/ui/: components.rs  mod.rs  prefetch_view.rs  recent_view.rs  system_restore_view.rs
