[package]
name = "recent-enabler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
iced = { version = "0.14.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
wmi = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
winreg = "0.55.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"
strip = "symbols"
