[package]
name = "recent-enabler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
iced = { version = "0.14.0", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
winreg = "0.55.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"
strip = "symbols"
