[package]
name = "recent-enabler"
version = "0.1.0"
edition = "2021"

# Core library dependencies (minimal, always included)
[dependencies]
thiserror = "2.0"
winreg = "0.55.0"
chrono = "0.4.43"
serde = { version = "1", features = ["derive"] }

# Optional dependencies for GUI binary
anyhow = { version = "1.0", optional = true }
iced = { version = "0.14.0", features = ["tokio"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
]

# Feature flags
[features]
default = ["gui"]                 # Default includes GUI for standalone binary
gui = ["anyhow", "iced", "tokio"] # GUI feature gates UI dependencies

# Binary target requires GUI feature
[[bin]]
name = "recent-enabler"
required-features = ["gui"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"
strip = "symbols"
